openshift/01-deployment-chaosmonkey.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: quotegame-choasmonkey
    app.kubernetes.io/component: quotegame-choasmonkey
    app.kubernetes.io/instance: quotegame-choasmonkey
    app.kubernetes.io/part-of: quotegame-app
  name: quotegame-choasmonkey
spec:
  replicas: 0
  selector:
    matchLabels:
      app: quotegame-choasmonkey
  template:
    metadata:
      labels:
        app: quotegame-choasmonkey
    spec:
      containers:
      - name: quotegame-choasmonkey
        image: quay.io/demoforum/quotegame-chaosmonkey:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
