openshift/01-deployment-processors.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: quotegame-processors
    app.kubernetes.io/component: quotegame-processors
    app.kubernetes.io/instance: quotegame-processors
    app.kubernetes.io/part-of: quotegame-app
  name: quotegame-processors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotegame-processors
  template:
    metadata:
      labels:
        app: quotegame-processors
    spec:
      containers:
      - name: quotegame-processors
        image: quay.io/demoforum/quotegame-processors:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
