openshift/00-statefulset-infinispan.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  annotations:
    description: Infinispan 10 (Ephemeral)
    iconClass: icon-infinispan
    openshift.io/display-name: Infinispan 10 (Ephemeral)
    openshift.io/documentation-url: 'http://infinispan.org/documentation/'
  name: infinispan
  labels:
    template: infinispan-ephemeral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infinispan-pod
      clusterName: infinispan
      infinispan_cr: infinispan
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: infinispan-pod
        clusterName: infinispan
        infinispan_cr: infinispan
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: infinispan-configuration
            defaultMode: 420
      containers:
        - resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: rest/v2/cache-managers/default/health/status
              port: 11222
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 80
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          terminationMessagePath: /dev/termination-log
          name: infinispan
          livenessProbe:
            httpGet:
              path: rest/v2/cache-managers/default/health/status
              port: 11222
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 80
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
          ports:
            - name: ping
              containerPort: 8888
              protocol: TCP
            - name: hotrod
              containerPort: 11222
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /opt/infinispan/server/conf
            - name: infinispan
              mountPath: /opt/infinispan/server/data
          terminationMessagePolicy: File
          image: 'infinispan/server:10.1.0.Final-1'
          command: 
          - /opt/infinispan/bin/server.sh
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  volumeClaimTemplates:
    - metadata:
        name: infinispan
        namespace: quote-game
        creationTimestamp: null
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        volumeMode: Filesystem
      status:
        phase: Pending
  serviceName: ''
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
---
kind: Service
apiVersion: v1
metadata:
  name: infinispan
  labels:
    clusterName: infinispan
    infinispan_cr: infinispan
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: management
      protocol: TCP
      port: 9990
      targetPort: 9990
    - name: ping
      protocol: TCP
      port: 8888
      targetPort: 8888
    - name: hotrod
      protocol: TCP
      port: 11222
      targetPort: 11222
  selector:
    app: infinispan-pod
    clusterName: infinispan
    infinispan_cr: infinispan
  type: ClusterIP
  sessionAffinity: None
