openshift/01-deployment-api.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: quotegame-api
    app.kubernetes.io/component: quotegame-api
    app.kubernetes.io/instance: quotegame-api
    app.kubernetes.io/part-of: quotegame-app
  name: quotegame-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotegame-api
  template:
    metadata:
      labels:
        app: quotegame-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
    spec:
      containers:
      - name: quotegame-api
        image: quay.io/demoforum/quotegame-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        livenessProbe:
          httpGet:
            path: "/health"
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: "/health"
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
        securityContext:
          privileged: false
---
kind: Service
apiVersion: v1
metadata:
  name: quotegame-api
  labels:
    app: quotegame-api
    app.kubernetes.io/component: quotegame-api
    app.kubernetes.io/instance: quotegame-api
    app.kubernetes.io/part-of: quotegame-app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: quotegame-api
  type: ClusterIP
  sessionAffinity: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quotegame-api
  labels:
    app: quotegame-api
    app.kubernetes.io/component: quotegame-api
    app.kubernetes.io/instance: quotegame-api
    app.kubernetes.io/part-of: quotegame-app
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: quotegame-api
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
